// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add button and edit menu when in readOnly mode 1`] = `
<div
  className="UserList"
>
  <EntityList
    action={false}
    data={
      Array [
        Object {
          "actions": false,
          "className": "user",
          "icon": <ForwardRef(SvgUser) />,
          "meta1": false,
          "meta2": "Manager",
          "name": "kermit",
          "type": "User",
        },
        Object {
          "actions": false,
          "className": "group",
          "icon": <ForwardRef(SvgUsergroup) />,
          "meta1": <React.Fragment>
            2
             
            Users
          </React.Fragment>,
          "meta2": "Manager",
          "name": "sales",
          "type": "User Group",
        },
      ]
    }
    empty="No results found"
    isLoading={false}
    name="Users and User Groups"
  />
  <DeleterErrorHandler
    deleteEntity={[Function]}
    entity={null}
    onClose={[Function]}
    onDelete={[Function]}
  />
  <AddUserModal
    existingUsers={
      Array [
        Object {
          "id": "USER:kermit",
          "identity": Object {
            "id": "kermit",
            "type": "user",
          },
          "role": "manager",
        },
        Object {
          "id": "GROUP:sales",
          "identity": Object {
            "id": "sales",
            "memberCount": 2,
            "type": "group",
          },
          "role": "manager",
        },
      ]
    }
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
  />
</div>
`;

exports[`should match snapshot 1`] = `
<div
  className="UserList"
>
  <EntityList
    action={
      <ForwardRef(Button)
        onClick={[Function]}
      >
        Add
      </ForwardRef(Button)>
    }
    data={
      Array [
        Object {
          "actions": Array [
            Object {
              "action": [Function],
              "icon": "edit",
              "text": "Edit",
            },
            Object {
              "action": [Function],
              "icon": "delete",
              "text": "Delete",
            },
          ],
          "className": "user",
          "icon": <ForwardRef(SvgUser) />,
          "meta1": false,
          "meta2": "Manager",
          "name": "kermit",
          "type": "User",
        },
        Object {
          "actions": Array [
            Object {
              "action": [Function],
              "icon": "edit",
              "text": "Edit",
            },
            Object {
              "action": [Function],
              "icon": "delete",
              "text": "Delete",
            },
          ],
          "className": "group",
          "icon": <ForwardRef(SvgUsergroup) />,
          "meta1": <React.Fragment>
            2
             
            Users
          </React.Fragment>,
          "meta2": "Manager",
          "name": "sales",
          "type": "User Group",
        },
      ]
    }
    empty="No results found"
    isLoading={false}
    name="Users and User Groups"
  />
  <DeleterErrorHandler
    deleteEntity={[Function]}
    entity={null}
    onClose={[Function]}
    onDelete={[Function]}
  />
  <AddUserModal
    existingUsers={
      Array [
        Object {
          "id": "USER:kermit",
          "identity": Object {
            "id": "kermit",
            "type": "user",
          },
          "role": "manager",
        },
        Object {
          "id": "GROUP:sales",
          "identity": Object {
            "id": "sales",
            "memberCount": 2,
            "type": "group",
          },
          "role": "manager",
        },
      ]
    }
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
  />
</div>
`;
